--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 beautifulsoup4==4.6.0
 bs4==0.0.1
 nltk==3.2.5
+numpy==1.14.3
+pandas==0.23.0
+python-dateutil==2.7.3
+pytz==2018.4
+scikit-learn==0.19.1
+scipy==1.1.0
 six==1.11.0
+sklearn==0.0
